# selfsync

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  README.zh-CN.md
.github/workflows/: ci.yml  release-binaries.yml  release.yml
crates/payload/: Cargo.toml
crates/payload/src/: lib.rs  mapping.rs  proxy.rs
crates/sync-server/: Cargo.toml
crates/sync-server/src/: main.rs
crates/sync-server/src/handler/: mod.rs  users.rs
docs/: account-mapping.md
lazycat/: .gitignore  cloud.lazycat.app.chromesync-v0.1.0.lpk  lzc-manifest.yml  package.yml  selfsync.loyalpartner-v0.1.0.lpk
src/: lib.rs  mapping.rs  proxy.rs
